<resources>
    <string name="app_name">OC_Project9</string>

    <string name="number_rooms">%1$d Rooms • %2$d Bedrooms • %3$d Bathrooms</string>
    <string name="square_meter">%1$f m²</string>
    <string name="string_arg_with_currency">%1$s$</string>
    <string name="string_arg_with_currency_1">%1$f$</string>
    <string name="price_value">$</string>

    <string name="real_estate">Real Estates</string>
    <string name="map">Map</string>
    <string name="loan_simulator">Loan Simulator</string>

    <string name="gps_disabled_msg">Your GPS is disabled, do you want to enable it?</string>
    <string name="positive_button">Yes</string>

    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Close</string>

    <string name="toolbar_search">Search</string>

    <string name="a11y_add_real_estate">Add new Real Estate</string>

    <string name="no_images_title">You need to had images</string>

    <string name="number_of_rooms">Number of rooms :</string>
    <string name="number_of_bedrooms">Number of bedrooms :</string>
    <string name="number_of_bathrooms">Number of bathrooms :</string>

    <string name="price">Price</string>
    <string name="living_space_square_foot">Living Space (Square Foot)</string>
    <string name="description">Description</string>
    <string name="type">Type : </string>

    // %1$s : 55 West %2$s : 25th Street, %3$s : New York, %4$s : NY, 10010
    <string name="full_address">%1$s %2$s, %3$s, %4$s, %5$s</string>
    <string name="grid_zone">Grid Zone</string>
    <string name="street_name">Street Name</string>
    <string name="city_borough">City / Borough</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>

    <string-array name="types_array">
        <item>House</item>
        <item>Penthouse</item>
        <item>Duplex</item>
        <item>Flat</item>
        <item>Loft</item>
    </string-array>

    // List
    <string name="sort_by">Sort by :</string>
    <string name="sort_by_date_asc">From most recent to oldest</string>
    <string name="sort_by_date_desc">From oldest to most recent</string>
    <string name="sort_by_price_asc">Ascending price</string>
    <string name="sort_by_price_desc">Descending price</string>
    <string name="sort_by_living_space_asc">Ascending living space</string>
    <string name="sort_by_living_space_desc">Descending living space</string>
    <string name="sort_by_rooms_number_asc">Ascending rooms number</string>
    <string name="sort_by_rooms_number_desc">Descending rooms number</string>

    <string name="filter_by">Filter by :</string>
    <string name="remove_filter">Remove filter</string>
    <string name="apartement_filter">Apartment</string>
    <string name="house_filter">House</string>
    <string name="penthouse_filter">Penthouse</string>
    <string name="duplex_filter">Duplex</string>
    <string name="flat_filter">Flat</string>
    <string name="loft_filter">Loft</string>

    // Details + Create
    <string name="toolbar_save_real_estate">Save</string>
    <string name="toolbar_add_image">Add a picture</string>
    <string name="toolbar_change_map">Change map</string>
    <string name="toolbar_is_sold">Is Sold</string>

    <string name="fields_should_not_be_equal_to_zero">Fields should not be zero</string>
    <string name="fields_are_not_digits">Fields should be digits</string>
    <string name="field_empty_toast_msg">Fields can not be empty</string>
    <string name="two_fields_filled_toast_msg">Two fields should be filled</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_image_from_url">Add image from URL</string>
    <string name="image_already_in_list">This photo is already on the list</string>
    <string name="new_real_estate_is_added">A Real Estate was successfully added</string>
    <string name="new_real_estate_is_updated">A Real Estate was successfully updated</string>
    <string name="storage_permission_toast">You need those permissions to use this app at its full potential</string>
    <string name="square_metre">m²</string>
    <string name="add_more_criteria">Add More Criteria +</string>

    // Builder Bottom

    <string name="living_space_title">Living Space (m²) : </string>
    <string name="nb_rooms_title">Number of rooms : </string>
    <string name="nb_bedrooms_title">Number of bedrooms : </string>
    <string name="nb_bathrooms_title">Number of bathrooms : </string>
    <string name="price_title">Price : </string>

    <string name="max_value">Max</string>
    <string name="min_value">Min</string>

    <string name="validate_filtering">Validate filters</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="start_time_from">From</string>
    <string name="start_time_to">To</string>
    <string name="entry_date">Entry Date</string>
    <string name="sale_date">Sale Date</string>
    <string name="living_space_min">Living Space Min</string>
    <string name="living_space_max">Living Space Max</string>
    <string name="nb_rooms_min">Nb rooms min</string>
    <string name="nb_rooms_max">Nb rooms max</string>
    <string name="nb_bedrooms_min">Nb bedrooms min</string>
    <string name="nb_bedrooms_max">Nb bedrooms max</string>
    <string name="nb_bathrooms_min">Nb bathrooms min</string>
    <string name="nb_bathrooms_max">Nb bathrooms max</string>
    <string name="price_min">Price min</string>
    <string name="price_max">Price Max</string>

    // Month : %1$d / DayOfMonth %2$d / Year : %3$d
    <string name="start_time_date_picker">%2$d.%1$d.%3$d</string>
    <string name="start_time_date_picker_0">%2$d.0%1$d.%3$d</string>
    <string name="start_time_h">%1$s h %2$d</string>
    <string name="real_estate_status_available">Available</string>
    <string name="real_estate_status_not_available">Not Available</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="money_needed">How much money do you need ?</string>
    <string name="months_needed_title">How many months do you need ?</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="total_payment_title">Total Payment</string>
    <string name="monthly_payment_title">Monthly Payment</string>
    <string name="total_interest_title">Total Interest</string>
    <string name="you_will_pay">You Will Pay</string>
    <string name="per_month">Per Month</string>
</resources>