<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/toolbar"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_is_sold"
            android:icon="@drawable/ic_sold"
            android:title="@string/toolbar_is_sold"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_change_map"
            android:icon="@drawable/ic_map"
            android:title="@string/toolbar_change_map"
            android:checkable="false"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/action_add_image"
            android:icon="@drawable/ic_add_image"
            android:checkable="false"
            android:title="@string/toolbar_add_image"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/action_show_point_of_interest"
            android:icon="@drawable/ic_area"
            android:title="Point of Interest"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/action_save_real_estate"
            android:icon="@drawable/ic_save"
            android:title="@string/toolbar_save_real_estate"
            app:showAsAction="always" />
    </group>
</menu>